--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,13 @@
-
 /* Your CSS Code here. */
 #btn{
-	background-color : black;
-	color : white;
-	border-radius : 5px;
-	border : 0px none rgb(255, 255, 255);
-	width:120px;
-	height:50px;
-	cursor: pointer;
+	background-color:black;
+	color:white;
+	border-radius:5px;
+	border:none;
 }
-
 #btn:hover{
-	background-color : yellow;
-	color : black;
-	border-radius : 30px;
+	background-color:yellow;
+	color:black;
+	border-radius:30px;
+	border:none;
 }
